--- a/cv.html
+++ b/cv.html
@@ -5,14 +5,16 @@ Personal Information
 
 Name:				Adam Nilsson
 Date of Birth:			06-02-2001
-Address:			Vargvägen 32b
+Address:			Umeå, Vargvägen 32b
 Mobile:				+46 72-502 44 01
 Email:				adam.nilsson@elev.ga.ntig.se
 
 Profile
 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-I am an enterprising young professional intending to continue my development as a programmer. I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness. I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.
+I am an enterprising young professional intending to continue my development as a programmer.
+I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness.
+I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.
 
 Education
 -------------------------------------------------------------------------------------------------------------------------------------------------------------------------
