Adam Nilsson CV

--- a/cv.html
+++ b/cv.html
@@ -1,40 +1,50 @@
-CV Adam Nilsson
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Adam Nilsson CV</title>
+	<link>
+	<link href="css/cvstyles.css" rel="stylesheet">
+</head>
+<body>
+<main>
+	<cv>
+		<header>
+			
 
-Personal Information
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+			<h2>Personal Information</h2>
 
-Name:				Adam Nilsson
-Date of Birth:			06-02-2001
-Address:			Vargvägen 32b
-Mobile:				+46 72-502 44 01
-Email:				adam.nilsson@elev.ga.ntig.se
+			<p>Name:				Adam Nilsson</p>
+			<p>Date of Birth:		06-02-2001</p>
+			<p>Address:			Umeå, Vargvägen 32b</p>
+			<p>Mobile:				+46 72-502 44 01</p>
+			<p>Email:				adam.nilsson@elev.ga.ntig.se</p>
 
-Profile
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+			<h2>Profile</h2>
 
-I am an enterprising young professional intending to continue my development as a programmer. I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness. I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.
+			<p>I am an enterprising young professional intending to continue my development as a programmer. I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness. I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.</p>
 
-Education
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+			<h2>Experience</h2>
 
+			<p>2018 - 2018 Umelagun</p>
+			<p>Cooperative Work Exercise</p>
 
-2018 - 2018			Umelagun
-Cooperative Work Exercise
+			<p>2017 - Present NTI High School Programming Line</p>
+			<p>Relevant Courses: Programming, Web Design and Technique</p>
+			<p>Average Grade: C/A</p>
 
-2017 - Present		NTI High School Programming Line
-Relevant Courses: Programming, Web Design and Technique
-Average Grade: C/A
+			<p>2014 - 2017 Online Programming Service Scratch</p>
+			<p>Advanced Gaming Development</p>
 
-2014 - 2017			Online Programming Service Scratch
-Advanced Gaming Development
+			<h2>Skills</h2>
 
-Skills
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+			<p>Languages: Swedish (mother tongue), English (fluent spoken and written command) and Spanish (relatively good spoken and written)</p>
 
-Languages: Swedish (mother tongue), English (fluent spoken and written command) and Spanish (relatively good spoken and written)
+			<h2>Interests & Additional Information</h2>
 
-Interests & Additional Information
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-
-Gaming, Parkour, Singing and Dancing.
+			<p>Gaming, Parkour, Singing and Dancing.</p>
+		</header>
+	</cv>
+</main>
+</body>
+</html>
