--- a/cv.html
+++ b/cv.html
@@ -5,68 +5,65 @@
 	<title>Adam Nilsson CV</title>
 	<link>
 	<link href="css/cvstyles.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 </head>
 <body>
 <main>
 	<cv>
 		<header>
-			
-
-			<h2>Personal Information</h2>
-
-<<<<<<< HEAD
-			<p>Name:				Adam Nilsson</p>
-			<p>Date of Birth:		06-02-2001</p>
-			<p>Address:			Umeå, Vargvägen 32b</p>
-			<p>Mobile:				+46 72-502 44 01</p>
-			<p>Email:				adam.nilsson@elev.ga.ntig.se</p>
-=======
-Name:				Adam Nilsson
-Date of Birth:			06-02-2001
-Address:			Umeå, Vargvägen 32b
-Mobile:				+46 72-502 44 01
-Email:				adam.nilsson@elev.ga.ntig.se
->>>>>>> 20971c6d9f03fb9b10331b502512cba67b94584c
-
-			<h2>Profile</h2>
-
-<<<<<<< HEAD
-			<p>I am an enterprising young professional intending to continue my development as a programmer. I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness. I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.</p>
-=======
-I am an enterprising young professional intending to continue my development as a programmer.
-I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness.
-I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.
->>>>>>> 20971c6d9f03fb9b10331b502512cba67b94584c
-
-			<h2>Experience</h2>
-
-			<p>2018 - 2018 Umelagun</p>
-			<p>Cooperative Work Exercise</p>
-
-			<p>2017 - Present NTI High School Programming Line</p>
-			<p>Relevant Courses: Programming, Web Design and Technique</p>
-			<p>Average Grade: C/A</p>
-
-			<p>2014 - 2017 Online Programming Service Scratch</p>
-			<p>Advanced Gaming Development</p>
-
-			<h2>Skills</h2>
-
-			<p>Languages: Swedish (mother tongue), English (fluent spoken and written command) and Spanish (relatively good spoken and written)</p>
-
-			<h2>Interests & Additional Information</h2>
-
-<<<<<<< HEAD
-			<p>Gaming, Parkour, Singing and Dancing.</p>
+			<span class="border"><strong>Adam Nilsson</strong></span>
 		</header>
+		<head>
+			<ul>
+				<p> </p>
+				<li>Date of Birth: 06-02-2001</li>
+				<li>Address: Umeå, Vargvägen 32b</li>
+				<li>Mobile: +46 72-502 44 01</li>
+				<li>Email: <a href="mailto:adam.nilsson@elev.ga.ntig.se">adam.nilsson@elev.ga.ntig.se</a></li>
+				<p> </p>
+			</ul>
+			<p>=======</p>
+		</head>
+		<body>
+			<span class="border2"><strong>Profile</strong></span>
+
+			<p>I am an enterprising young professional intending to continue my development as a programmer. I think in terms of results and objectives, I am a completionist and I work with determination and progressive decisiveness. I have a positive mental attitude and I find proactive and impeccable ways to stimulate and engage with people, hence making my understanding of situations raise through the roof.</p>
+			
+			<p>=======</p>
+		</head>
+		<aside>
+		<head>
+			<span class="border3"><strong>Experience</strong></span>
+			<ul>
+				<p> </p>
+				<li>2018 - 2018 Umelagun</li>
+				<p>Cooperative Work Exercise</p>
+
+				<li>2017 - Present NTI High School Programming Line</li>
+				<p>Relevant Courses: Programming, Web Design and Technique</p>
+				<blockquote>Average Grade: C/A</blockquote>
+
+				<li>2014 - 2017 Online Programming Service Scratch</li>
+				<p> </p>
+				<li>Advanced Gaming Development</li>
+				<p> </p>
+			</ul>
+			<span class="border4"><strong>Skills</strong></span>
+		</head>
+		<head>
+			<p>Languages: Swedish (mother tongue)
+			<br>English (fluent spoken and written command)
+			<br>Spanish (relatively good spoken and written)</p>
+
+			<p>=======</p>
+		</head>
+		<head>
+			<span class="border5"><strong>Interests & Additional Information</strong></span>
+
+			<p>Gaming, Parkour, Singing and Dancing.</p>
+		</head>
+		</aside>
 	</cv>
 </main>
 </body>
 </html>
-=======
-Interests & Additional Information
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-
-
-Gaming, Parkour, Singing and Dancing.
->>>>>>> 20971c6d9f03fb9b10331b502512cba67b94584c
