--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <main>
 	<section class="ett">
 		<div style="border: outset 30px; margin-right: 10px; margin: 1px; border-color: lightblue;">
-		<img src="bild/dwd.png" class = "finfin">
+		<img src="bild/dwd.png" alt = "Bild av liten fin pojke" class = "finfin">
 		<h2>Adam Nilsson</h2>
 			<ul>
 				<br>
